# Mixing-Studio

./: .gitignore  1. 架构关系与数据流向图 (Mermaid 格式).md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE_CHECKLIST.md  CI_CD.md  PROJECT_STRUCTURE.md
docs/planning/: 团队双人详细分工与协同规范.md  调音.md  附录：调音室 - 高阶附加功能点规划.md
include/App/: MixerApp.h  MixingStudioApp.h
include/Command/: ICommand.h  MixerCommands.h  PlaybackCommands.h  ProjectCommands.h  TrackDspCommands.h
include/Common/: ICommandBase.h  MixerTypes.h
include/DSP/: DspAnalysis.h  DspProcessor.h
include/Model/: AssetLibrary.h  AudioEngine.h  AudioFileDecoder.h  AudioTrack.h  ProjectStore.h  WavDecoder.h  WavExporter.h
include/ViewModel/: IMixerViewModel.h  ITrackViewModel.h  MixerViewModel.h  RealMixerViewModel.h  TrackViewModel.h
report/: README.md
report/member-A/: README.md  中期分报告.md  使用说明_成员B测试指南.md  功能报告_后期集成与UI.md
report/member-B/: README.md  中期分报告.md
report/shared/: AI_USAGE_LOG.md  CROSS_TEST_LOG.md  TEST_AND_TOOLCHAIN.md
samples/: ATTRIBUTION.md  demo_session.json
scripts/: README.md  Resolve-QtPath.ps1  configure_qt_windows.ps1  fetch_sample_assets.ps1  generate_sample_wavs.ps1  run_app.ps1  run_tests.ps1  run_tests.sh  validate_feature.ps1
src/: main.cpp
src/App/: MixerApp.cpp  MixerApp_Playback.cpp  MixerApp_Project.cpp  MixerApp_Tracks.cpp  MixingStudioApp.cpp
src/Command/: PlaybackCommands.cpp  ProjectCommands.cpp  TrackDspCommands.cpp
src/DSP/: DspAnalysis.cpp  DspProcessor.cpp
src/Model/: AssetLibrary.cpp  AudioEngine.cpp  AudioEngine_Analysis.cpp  AudioEngine_Persistence.cpp  AudioEngine_Playback.cpp  AudioEngine_Tracks.cpp  AudioFileDecoder.cpp  ProjectStore.cpp  WavDecoder.cpp  WavExporter.cpp
src/View/: ClipLoopToggle.qml  DarkButton.qml  DetachablePanelHost.qml  LevelMeterBar.qml  LibraryPanel.qml  Main.qml  NumericValueField.qml  ProjectsPanel.qml  SpectrumPanel.qml  Theme.qml  TimelineStrip.qml  ToolIconButton.qml  TrackMixerList.qml  TransportBar.qml  WaveformPanel.qml
src/ViewModel/: MixerViewModel.cpp  MixerViewModel_Sync.cpp  RealMixerViewModel.cpp  TrackViewModel.cpp
tests/: README.md  test_asset_library.cpp  test_audio_engine.cpp  test_audio_pipeline_e2e.cpp  test_automation.cpp  test_commands.cpp  test_common_types.cpp  test_dsp_processor.cpp  test_mixer_app.cpp  test_project_store.cpp  test_ui_binder.cpp  test_viewmodel_commands.cpp  test_wav_decoder.cpp  test_wav_export.cpp
